// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > Snapshot tests > matches snapshot for link button 1`] = `
<a
  class="inline-block rounded-lg font-semibold transition-all focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed bg-gradient-to-r from-blue-600 to-purple-600 text-white hover:from-blue-700 hover:to-purple-700 hover:shadow-lg px-6 py-2.5 text-base"
  href="/test"
>
  Link Button
</a>
`;

exports[`Button > Snapshot tests > matches snapshot for outline button 1`] = `
<button
  class="inline-block rounded-lg font-semibold transition-all focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed border-2 border-slate-300 bg-white/50 text-slate-900 backdrop-blur-sm hover:border-slate-400 dark:border-slate-600 dark:bg-slate-800/50 dark:text-slate-50 dark:hover:border-slate-500 px-4 py-2 text-sm"
>
  Outline Small
</button>
`;

exports[`Button > Snapshot tests > matches snapshot for primary button 1`] = `
<button
  class="inline-block rounded-lg font-semibold transition-all focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed bg-gradient-to-r from-blue-600 to-purple-600 text-white hover:from-blue-700 hover:to-purple-700 hover:shadow-lg px-8 py-3 text-lg"
>
  Primary Large
</button>
`;

exports[`Button > Snapshot tests > matches snapshot for secondary button 1`] = `
<button
  class="inline-block rounded-lg font-semibold transition-all focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed bg-slate-800 text-white hover:bg-slate-700 dark:bg-slate-100 dark:text-slate-900 dark:hover:bg-slate-200 px-6 py-2.5 text-base"
>
  Secondary Medium
</button>
`;
